--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,8 @@
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
-    "ts-command-line-args": "^2.5.1"
+    "ts-command-line-args": "^2.5.1",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
@@ -51,6 +52,7 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.9",
     "@types/supertest": "^2.0.12",
+    "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.46.0",
