--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,8 @@
   "scripts": {
     "build": "npx ts-node build.ts",
     "lint": "npx eslint --ext .ts src/",
-    "lint:tests": "npx eslint --ext .ts spec/",
     "start": "node -r module-alias/register ./dist --env=production",
-    "dev": "nodemon",
-    "test": "nodemon --config ./spec/nodemon.json",
-    "test:no-reloading": "npx ts-node --files -r tsconfig-paths/register ./spec"
+    "dev": "nodemon"
   },
   "nodemonConfig": {
     "watch": [
@@ -41,21 +38,17 @@
     "@types/express": "^4.17.17",
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^11.0.1",
-    "@types/jasmine": "^4.3.5",
     "@types/jsonfile": "^6.1.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.9",
-    "@types/supertest": "^2.0.12",
     "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.46.0",
     "eslint-plugin-node": "^11.1.0",
-    "find": "^0.3.0",
+  "find": "^0.3.0",
     "fs-extra": "^11.1.1",
-    "jasmine": "^5.1.0",
     "nodemon": "^3.0.1",
-    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
