Adds svgToPng external call and wizards graph

--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
+    "svg2png": "^4.1.1",
     "ts-command-line-args": "^2.5.1",
     "ws": "^8.13.0"
   },
@@ -42,12 +43,13 @@
     "@types/jsonfile": "^6.1.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.9",
+    "@types/svg2png": "^4.1.4",
     "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.46.0",
     "eslint-plugin-node": "^11.1.0",
-  "find": "^0.3.0",
+    "find": "^0.3.0",
     "fs-extra": "^11.1.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
